--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cm-agency",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "main": "main.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Milan Petkovski",
   "license": "ISC",
   "description": "",
   "dependencies": {
