--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
     "helmet": "^8.0.0",
